--- a/src/Option/Option.css
+++ b/src/Option/Option.css
@@ -4,8 +4,8 @@
         /* text-align: center; */
       }
 
-      .optionlistelement{
+      /* .optionlistelement{
         border:solid;
         padding:5px;
         margin:5px;
-      }
+      } */
