--- a/src/LogInForm/LogInForm.css
+++ b/src/LogInForm/LogInForm.css
@@ -1,4 +1,4 @@
-.logInform{
+/* .logInform{
     padding: 2em 0;
     margin: 0;
   }
@@ -11,26 +11,24 @@
   form {
     margin: 0 auto;
     /* border: 1px solid black; */
-  }
+  /* }  */
   
   fieldset {
     width: 100%;
     margin: 0 auto;
-    display: flex;
-    /* flex-flow: column nowrap; */
-    /* background-color: $color-surface; */
+    /* display: flex; */
     border: none;
     border-radius: 4px;
-    /* box-shadow: -1px 1px 5px 4px $color-shadow; */
-    padding: 1em 1.5em;
+    box-shadow: -1px 1px 5px 4px black; 
+    padding: 3px;
   }
-    label{
+    /* label{
       margin: 1em 0 0 0;
       padding: .25em 0;
       text-align: left;
       width: auto;
 
-    }
+    } */
   
     input {
       width: 100%;
@@ -38,8 +36,7 @@
       padding: 0 .5em;
       border-radius: 2px;
       border: 2px solid 
-      /* background-color: $color-overlay; */
-      /* color: $color-text-normal; */
+
     }
   
     input:focus {
@@ -48,6 +45,10 @@
   
     div {
       margin: 1em;
+    }
+    
+    h2{
+        text-align: center;
     }
   
   
@@ -62,10 +63,12 @@
   }
   
   input[type='submit'] {
-    margin: 2em auto 1em auto;
+    /* margin: 2em auto 1em auto; */
+    margin-top:5px;
     padding: 0.25em 0;
-    width: 100px;
+    width: 100%;
     background-color: black;
+    color:white;
     border: 1px solid whitesmoke;
     border-radius: 2px;
     box-shadow: 2px 2px 2px 0px black;
@@ -90,6 +93,12 @@
     }
   } */
   
+  /* .login-form__user-name-label{
+      background-color: chartreuse;
+  } */
+  /* .logInForm{
+    background-color: chartreuse;
+  } */
   @media only screen and (min-width: 520px) {
     fieldset {
       width: 400px;
