--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -14,8 +14,8 @@
   /* }  */
   
   fieldset {
-    width: 100%;
-    margin: 0 auto;
+    max-width: 100%;
+    margin: 0 0 0 0;
     /* display: flex; */
     border: none;
     border-radius: 4px;
@@ -31,11 +31,12 @@
     } */
   
     input {
-      width: 100%;
+      width: 1400px;
       line-height: 2em;
       padding: 0 .5em;
       border-radius: 2px;
-      border: 2px solid 
+      border: 2px solid; 
+      
 
     }
   
