--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -1,17 +1,6 @@
-/* .logInform{
-    padding: 2em 0;
-    margin: 0;
-  }
-  
-  .registration-page {
-    padding: 2em 0;
-    margin: 0;
-  }
-  
-  form {
-    margin: 0 auto;
-    /* border: 1px solid black; */
-  /* }  */
+*{
+  box-sizing: border-box;
+}
   
   fieldset {
     max-width: 100%;
@@ -31,7 +20,7 @@
     } */
   
     input {
-      width: 1400px;
+      width: 100%;
       line-height: 2em;
       padding: 0 .5em;
       border-radius: 2px;
@@ -85,9 +74,9 @@
   /* .logInForm{
     background-color: chartreuse;
   } */
-  @media only screen and (min-width: 520px) {
+  @media only screen and (min-width: 640px) {
     fieldset {
-      width: 400px;
+      width: 100%;
       padding: 1em 2em;
     }
   
