--- a/src/components/RegistrationForm/RegistrationForm.css
+++ b/src/components/RegistrationForm/RegistrationForm.css
@@ -1,3 +1,19 @@
+*{
+    box-sizing: border-box;
+  }
+
+
+
+fieldset {
+    max-width: 100%;
+    margin: 0 0 0 0;
+    /* display: flex; */
+    border: none;
+    border-radius: 4px;
+    box-shadow: -1px 1px 5px 4px black; 
+    padding: 10px;
+  }
+
 .registrationForm{
     text-decoration: none;
     padding: 5px;
@@ -6,3 +22,4 @@
     color:black;
     background:white;
 }
+
