--- a/src/routes/LandingPage/LandingPage.css
+++ b/src/routes/LandingPage/LandingPage.css
@@ -1,22 +1,32 @@
 h1{
+    width:100%;
     background:red;
     color:white;
     
 }
 
 .firtssection{
+    width:100%;
     border:solid;
     /* border-radius: 5%; */
     margin:10px;
+    background-color:gray;
+    color:white;
 }
 
 .secondsection{
+    width:100%;
     border:solid;
     margin:10px;
     /* border-radius: 5%; */
+    background-color:gray;
+    color:white;
 }
 .thirdsection{
+    width:100%;
     border:solid;
     margin:10px;
     /* border-radius: 5%; */
+    background-color:gray;
+    color:white;
 }
