--- a/src/components/Direction/Direction.css
+++ b/src/components/Direction/Direction.css
@@ -1,4 +1,15 @@
-.Hyph {
+fieldset {
+    max-width: 100%;
+    margin: 0 0 0 0;
+    /* display: flex; */
+    border: none;
+    border-radius: 4px;
+    box-shadow: -1px 1px 5px 4px black; 
+    padding: 3px;
+  }
+
+
+/* .Hyph {
     margin-right: 5px;
     margin-left: 5px;
   }
@@ -46,4 +57,4 @@
   .Section--list {
     margin-left: 10px;
     margin-right: 10px;
-  }
+  } */
