--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -57,6 +57,15 @@ h2{
     color:black;
     background:white; 
 }
+.month{
+  text-decoration: none;
+  padding: 5px;
+  border-radius: 10px;
+  margin: 5px;
+  font-size: 10px;
+  color:black;
+  background:white; 
+}
 .LoginPage{
     text-decoration: none;
     padding: 5px;
