--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,11 +2,11 @@
     box-sizing: border-box;
     /* text-align: center; */
   }
-  body {
-    background: transparent url(../images/souleymane-3.jpg) no-repeat fixed center center/cover;
+  /* body {
+    background: transparent url(../../images/souleymane-3.jpg) no-repeat fixed center center/cover;
     margin: 0 auto;
     position: relative;
-}
+} */
 
   
 
