--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,7 +6,8 @@
 .headerContainer{
     background-color: darkgrey;
     height:100px;
-    max-width:100%;
+    max-width:90%;
+    margin: 5px 5px 100px 50px;
     /* padding: 1px;
     margin-top:2; */
     /* text-align: right;   */
@@ -103,7 +104,6 @@ h2{
     text-decoration: none;
     margin: 0 20px 0 0;
     font-family: 'Montserrat Alternates', sans-serif;
-  
   }
   .navButton a:hover {
     color: black;
@@ -117,7 +117,7 @@ h2{
 @media all and (min-width: 640px) {
     header {
       display: flex;
-      height:100px;
+      height:200px;
       justify-content: space-between;
     }
   
@@ -155,7 +155,17 @@ h2{
         justify-content: center;
         text-align:center;
     }
-  
+
+    /* .navButton {
+      display: flex;
+      flex-direction: row;
+      justify-content: right;
+      padding-bottom: 15px;
+      list-style-type: none;
+      margin: 14px 0 14px 20px;
+      text-align: center;
+    }
+   */
     /* .group {
       flex-direction: row;
     } */
