--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -2,15 +2,19 @@
   box-sizing: border-box;
 }
   
-  fieldset {
-    max-width: 100%;
-    margin: 0 0 0 0;
+  /* fieldset {
+    max-width: 80%;
+    margin: 10px 10px  10px 10px;
     /* display: flex; */
-    border: none;
+    /* border: none;
+    height:200px;
     border-radius: 4px;
     box-shadow: -1px 1px 5px 4px black; 
-    padding: 3px;
-  }
+    padding: 3px; */
+  /* }  */
+  /* .form-group{
+    margin: 10px 10px  10px 10px;
+  } */
     /* label{
       margin: 1em 0 0 0;
       padding: .25em 0;
@@ -18,6 +22,9 @@
       width: auto;
 
     } */
+    /* .LoginForm{
+     margin-top: 10px;
+    }
   
     input {
       width: 100%;
@@ -42,31 +49,31 @@
         color:black;
         margin:2px;
     }
-  
+   */
   
   /* .error-msg {
     color: $color-error;
   }
    */
-  .warning-msg {
+  /* .warning-msg {
     margin-top: 1em;
     color: red;
     font-size: 12px;
   }
-  
-  input[type='submit'] {
+   */
+  /* input[type='submit'] {
     /* margin: 2em auto 1em auto; */
-    margin-top:5px;
+    /* margin-top:5px;
     padding: 0.25em 0;
-    width: 100%;
+    width: 60%;
     background-color: black;
     color:white;
     border: 1px solid whitesmoke;
     border-radius: 2px;
     box-shadow: 2px 2px 2px 0px black;
-    cursor: pointer;
+    cursor: pointer; */
     
-  }
+  /* } */ 
     
   /* .login-form__user-name-label{
       background-color: chartreuse;
@@ -74,9 +81,9 @@
   /* .logInForm{
     background-color: chartreuse;
   } */
-  @media only screen and (min-width: 640px) {
+  /* @media only screen and (min-width: 640px) {
     fieldset {
-      width: 100%;
+      width: 80%;
       padding: 1em 2em;
     }
   
@@ -89,4 +96,43 @@
       padding: 1em;
       margin: 2em auto;
     }
+  } */
+
+
+  /* ............@media Query...........................*/
+
+/* @media all and (min-width: 640px) {
+  .LoginForm {
+     margin: 20px;
+      width: 80%;
+      padding: 1em 2em;
+    }
+  
+    .login-page {
+      padding: 1em;
+      margin: 2em auto;
+    }
+  } */
+/* Media Query and type  for screen smaller or equal to 640px*/
+/* @media all and (max-width: 640px) {
+  .headerContainer {
+    width: 90%;
+    margin: auto;
+    height:250px;
+    flex-direction: row;
+    margin-bottom:15px;
   }
+  h2{
+      color:white;
+      font-size: 20px;
+      text-align: center;
+  }
+  .navButton{
+      justify-content: center;
+      text-align:center;
+  } */
+
+  /* .group {
+    flex-direction: row;
+  } */
+/* } */
