--- a/src/routes/LandingPage/LandingPage.css
+++ b/src/routes/LandingPage/LandingPage.css
@@ -36,3 +36,69 @@ h1{
     background-color:gray;
     color:white;
 }
+  /* ............@media Query...........................*/
+
+  @media all and (min-width: 640px) {
+    header {
+      display: flex;
+      height:100px;
+      justify-content: space-between;
+    }
+  
+    .logo {
+      margin: 14px 0 14px 20px;
+      padding-top: 0;
+      font-size: 42px;
+    }
+    
+    .navButton {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        padding-bottom: 15px;
+        list-style-type: none;
+        margin: 14px 0 14px 20px;
+        text-align: right;
+      }
+  }
+  /* Media Query and type  for screen smaller or equal to 640px*/
+  @media all and (max-width: 640px) {
+    .firtssection {
+      width: 90%;
+      margin: auto;
+      height:250px;
+      flex-direction: row;
+      margin-bottom:15px;
+    }
+    .secondsection {
+        width: 90%;
+        margin: auto;
+        height:250px;
+        flex-direction: row;
+        margin-bottom:15px;
+      }
+      .thirdsection {
+        width: 90%;
+        margin: auto;
+        height:250px;
+        flex-direction: row;
+        margin-bottom:15px;
+      }
+    h2{
+        color:white;
+        font-size: 20px;
+        text-align: center;
+    }
+    p{
+        justify-content: center;
+        text-align:center;
+    }
+    h3{
+        text-align: center;
+        color:red;
+    }
+  
+    /* .group {
+      flex-direction: row;
+    } */
+  }
