--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,15 +2,13 @@
     box-sizing: border-box;
 }
 
-
+/* 
 .headerContainer{
-    background-color: darkgrey;
+    background-color: #808080;
     height:100px;
     max-width:90%;
     margin: 5px 5px 100px 50px;
-    /* padding: 1px;
-    margin-top:2; */
-    /* text-align: right;   */
+   
 }
 
 h2{
@@ -23,32 +21,7 @@ h2{
     text-decoration: none;
     padding: 5px;
 }
-/* .loginForm{
-    text-decoration: none;
-    padding: 5px;
-    border-radius: 10px;
-    margin: 5px;
-    color:black;
-    background:white;
-} */
 
-/* .registerForm{
-    text-decoration: none;
-    padding: 5px;
-    border-radius: 10px;
-    margin: 5px;
-    color:black;
-    background:white;
-} */
-/* .homepage{
-    text-decoration: none;
-    padding: 5px;
-    border: solid;
-    border-radius: 10px;
-    margin: 5px;
-    color:black;
-    background:white;
-} */
 .result{
     text-decoration: none;
     padding: 5px;
@@ -84,19 +57,19 @@ h2{
     font-size: 10px;
     color:black;
     background:white;
-}
+} */
 
 
 
 /*.......................Navigation..................................... */
-/* .navButton {
+ /* .navButton {
     display: flex;
     flex-direction: row;
     justify-content: center;
     padding-bottom: 15px;
     list-style-type: none;
     margin-bottom:10px;
-  } */
+  } 
   
   
   .navButton a{
@@ -110,11 +83,11 @@ h2{
   }
   .navButton:last-child a {
     margin-right:2px;
-  }
+  } */
 
   /* ............@media Query...........................*/
 
-@media all and (min-width: 640px) {
+/* @media all and (min-width: 640px) {
     header {
       display: flex;
       height:200px;
@@ -136,9 +109,9 @@ h2{
         margin: 14px 0 14px 20px;
         text-align: right;
       }
-  }
+  } */
   /* Media Query and type  for screen smaller or equal to 640px*/
-  @media all and (max-width: 640px) {
+  /* @media all and (max-width: 640px) {
     .headerContainer {
       width: 90%;
       margin: auto;
@@ -156,17 +129,58 @@ h2{
         text-align:center;
     }
 
-    /* .navButton {
-      display: flex;
-      flex-direction: row;
-      justify-content: right;
-      padding-bottom: 15px;
-      list-style-type: none;
-      margin: 14px 0 14px 20px;
-      text-align: center;
-    }
-   */
-    /* .group {
-      flex-direction: row;
-    } */
+  } */
+
+  nav {
+    border-bottom: 2px solid;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+    height: 2.5em;
+    padding: 0 .5em;
   }
+  
+  .site-nav__dir a:nth-child(1) {
+      margin-right: .5em;
+    }
+  
+   .site-nav__dir--logged-in a:nth-child(1) {
+      margin-right: .5em;
+    }
+  
+     a {
+      font-size: 14px;
+      text-decoration: none;
+    }
+  
+    div a {
+      font-size: 14px;
+      text-decoration: none;
+    }
+  
+    h1 {
+      font-size: 18px;
+    }
+  
+  
+  @media only screen and (min-width: 520px) {
+    nav {
+      padding: 0 1em;
+    }
+       a {
+        font-size: 1em;
+        text-decoration: none;
+      }
+    
+      div a {
+        font-size: 1em;
+        text-decoration: none;
+      }
+    
+      h1 {
+        font-size: 24px;
+      }
+    }
+  
+
