--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -2,19 +2,19 @@
   box-sizing: border-box;
 }
   
-  /* fieldset {
+  fieldset {
     max-width: 80%;
     margin: 10px 10px  10px 10px;
-    /* display: flex; */
-    /* border: none;
+    display: flex; 
+    border: none;
     height:200px;
     border-radius: 4px;
     box-shadow: -1px 1px 5px 4px black; 
-    padding: 3px; */
-  /* }  */
-  /* .form-group{
+    padding: 3px; 
+   }  
+   .form-group{
     margin: 10px 10px  10px 10px;
-  } */
+  } 
     /* label{
       margin: 1em 0 0 0;
       padding: .25em 0;
@@ -61,9 +61,9 @@
     font-size: 12px;
   }
    */
-  /* input[type='submit'] {
+   input[type='submit'] {
     /* margin: 2em auto 1em auto; */
-    /* margin-top:5px;
+     margin-top:5px;
     padding: 0.25em 0;
     width: 60%;
     background-color: black;
@@ -71,9 +71,9 @@
     border: 1px solid whitesmoke;
     border-radius: 2px;
     box-shadow: 2px 2px 2px 0px black;
-    cursor: pointer; */
+    cursor: pointer; 
     
-  /* } */ 
+   } 
     
   /* .login-form__user-name-label{
       background-color: chartreuse;
@@ -101,8 +101,8 @@
 
   /* ............@media Query...........................*/
 
-/* @media all and (min-width: 640px) {
-  .LoginForm {
+ @media all and (min-width: 640px) {
+  .form-group {
      margin: 20px;
       width: 80%;
       padding: 1em 2em;
@@ -112,9 +112,9 @@
       padding: 1em;
       margin: 2em auto;
     }
-  } */
+  } 
 /* Media Query and type  for screen smaller or equal to 640px*/
-/* @media all and (max-width: 640px) {
+ @media all and (max-width: 640px) {
   .headerContainer {
     width: 90%;
     margin: auto;
@@ -130,9 +130,9 @@
   .navButton{
       justify-content: center;
       text-align:center;
-  } */
+  } 
 
   /* .group {
     flex-direction: row;
   } */
-/* } */
+ } 
