--- a/src/routes/LandingPage/LandingPage.css
+++ b/src/routes/LandingPage/LandingPage.css
@@ -39,11 +39,18 @@ h1{
   /* ............@media Query...........................*/
 
   @media all and (min-width: 640px) {
-    header {
+      .homePage{
+        display: flex;
+        flex-direction: row;
+        text-align: center;
+        max-width:90%;
+        margin-left: 40px;
+      }
+    /* header {
       display: flex;
       height:100px;
-      justify-content: space-between;
-    }
+      /* justify-content: space-between; */
+    /* }  */
   
     .logo {
       margin: 14px 0 14px 20px;
@@ -55,10 +62,12 @@ h1{
         display: flex;
         flex-direction: row;
         justify-content: center;
-        padding-bottom: 15px;
+        padding-bottom: 5px;
+        max-width: 100%;
         list-style-type: none;
-        margin: 14px 0 14px 20px;
+        margin: 0px 0 0px 0px;
         text-align: right;
+        background-color: red;
       }
   }
   /* Media Query and type  for screen smaller or equal to 640px*/
