--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -4,7 +4,7 @@
   
   fieldset {
     max-width: 80%;
-    margin: 10px 10px  10px 10px;
+    /* margin: 10px 10px  10px 10px; */
     display: flex; 
     border: none;
     height:200px;
@@ -75,6 +75,29 @@
     
    } 
     
+
+
+fieldset {
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-flow: column nowrap;
+ /* justify-content: center; */
+   /* align-items: center; */
+  background-color: black;
+  border: none;
+  border-radius: 4px;
+  box-shadow: -1px 1px 5px 4px black;
+  padding: 1em 1.5em;
+}
+  label {
+    margin: 1em 0 0 0;
+    padding: .25em 0;
+    text-align: left;
+    width: auto;
+  /*   display: flex;
+    flex-direction: column nowrap; */
+  }
   /* .login-form__user-name-label{
       background-color: chartreuse;
   } */
@@ -108,29 +131,42 @@
       padding: 1em 2em;
     }
   
-    .login-page {
+    .fieldset {
       padding: 1em;
       margin: 2em auto;
     }
+    input[type='submit'] {
+      /* margin: 2em auto 1em auto; */
+       margin-top:5px;
+      padding: 0.25em 0;
+      width: 60%;
+      background-color: black;
+      color:white;
+      border: 1px solid whitesmoke;
+      border-radius: 2px;
+      box-shadow: 2px 2px 2px 0px black;
+      cursor: pointer; 
+      
+     } 
   } 
 /* Media Query and type  for screen smaller or equal to 640px*/
  @media all and (max-width: 640px) {
-  .headerContainer {
+  /* .headerContainer {
     width: 90%;
     margin: auto;
     height:250px;
     flex-direction: row;
     margin-bottom:15px;
-  }
-  h2{
+  } */
+  /* h2{
       color:white;
       font-size: 20px;
       text-align: center;
-  }
-  .navButton{
+  } */
+  /* .navButton{
       justify-content: center;
       text-align:center;
-  } 
+  }  */
 
   /* .group {
     flex-direction: row;
