--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -153,6 +153,13 @@ h2{
     /* background-color: red; */
     /* color: white; */
   }
+  .resultlink{
+    margin: 30px;
+    color:black;
+    width:40px;
+    border-radius: 5px;
+    
+  }
   /* .site-nav__dir a:nth-child(1) {
       margin-right: .5em;
     }
