--- a/src/routes/Result/Result.css
+++ b/src/routes/Result/Result.css
@@ -1,8 +1,7 @@
 .Result {
     --note-height: 88px;
-    background-color: #010d1e;
-    color: #cacaca;
-    height: var(--note-height);
+    background-color: white;
+    color: black;
     margin-bottom: 8px;
     max-width: 380px;
     padding: 8px 0 8px 8px;
