--- a/src/routes/Result/Result.css
+++ b/src/routes/Result/Result.css
@@ -1,5 +1,5 @@
 .Result {
-    --note-height: 88px;
+    --result-height: 88px;
     background-color: white;
     color: black;
     margin-bottom: 8px;
@@ -9,18 +9,18 @@
   }
   
   .Result__delete {
-    --note-button-height: 32px;
+    --result-button-height: 32px;
     background-color: #041a3a;
     border: 0;
-    color: #bdbcbc;
+    color:red;
     float: right;
     font-size: 12px;
     height: var(--note-button-height);
     position: relative;
-    top: calc((var(--note-button-height) + 32px) * -1);
+    /* top: calc((var(--note-button-height) + 32px) * -1); */
     transform-origin: right bottom;
-    transform: rotate(-90deg);
-    width: calc(var(--note-height));
+    /* transform: rotate(-90deg); */
+    /* width: calc(var(--note-height)); */
   }
   .Result__delete:hover {
     background-color: #bd0909;
