--- a/src/routes/Result/Result.css
+++ b/src/routes/Result/Result.css
@@ -8,17 +8,17 @@
     position: relative;
   }
   
-  .Result__delete {
-    --result-button-height: 32px;
+  .Result__delete{
+    /* --result-button-height: 32px; */
     background-color: #041a3a;
     border: 0;
     color:red;
     float: right;
     font-size: 12px;
-    height: var(--note-button-height);
+    /* height: var(--note-button-height); */
     position: relative;
     /* top: calc((var(--note-button-height) + 32px) * -1); */
-    transform-origin: right bottom;
+    /* transform-origin: right bottom; */
     /* transform: rotate(-90deg); */
     /* width: calc(var(--note-height)); */
   }
@@ -29,7 +29,7 @@
     font-weight: bold;
   }
   
-  .Result__result_read {
+  .Result__result_read{
     font-family: var(--custom-font);
     font-size: 20px;
     margin: 0;
