--- a/src/routes/Result/Result.css
+++ b/src/routes/Result/Result.css
@@ -1,53 +1,11 @@
-.Result {
-    --result-height: 88px;
-    background-color: white;
-    color: black;
-    margin-bottom: 8px;
-    max-width: 380px;
-    padding: 8px 0 8px 8px;
-    position: relative;
-  }
-  
-  .Result__delete{
-    /* --result-button-height: 32px; */
-    background-color: #041a3a;
-    border: 0;
-    color:red;
-    float: right;
-    font-size: 12px;
-    /* height: var(--note-button-height); */
-    position: relative;
-    /* top: calc((var(--note-button-height) + 32px) * -1); */
-    /* transform-origin: right bottom; */
-    /* transform: rotate(-90deg); */
-    /* width: calc(var(--note-height)); */
-  }
-  .Result__delete:hover {
-    background-color: #bd0909;
-    color: white;
-    cursor: pointer;
-    font-weight: bold;
-  }
-  
-  .Result__result_read{
-    font-family: var(--custom-font);
-    font-size: 20px;
-    margin: 0;
-    max-width: 80%;
-    min-height: 24px;
-  }
-  .Result__result_read a {
-    color: #cacaca;
-    display: block;
-    text-decoration: none;
-  }
-  .Result__result_read a:hover {
-    color: #FFB72F;
-  }
-  
-  .Result__date_tested {
-    bottom: 8px;
-    color: #a7a5a5;
-    font-size: 14px;
-    position: absolute;
-  }
+.NotePageMain {
+  background-color: #efefef;
+  height: 100%;
+  padding: 10px;
+  width: 100%;
+}
+
+.NotePageMain__content {
+  color: #3a3939;
+  max-width: 380px;
+}
