--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -194,6 +194,9 @@ h2{
       display: flex;
       flex-direction: row;
     }
+    .site-nav{
+      height:100px;
+    }
 
     /* .site-nav__dir a:nth-child(1) {
       margin-right: .5em;
