--- a/src/routes/Result/Result.css
+++ b/src/routes/Result/Result.css
@@ -1,11 +1,11 @@
-.NotePageMain {
+.NoteResult {
   background-color: #efefef;
   height: 100%;
   padding: 10px;
   width: 100%;
 }
 
-.NotePageMain__content {
+.NoteResult__content {
   color: #3a3939;
   max-width: 380px;
 }
