--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -1,174 +1,213 @@
 *{
   box-sizing: border-box;
-}
+  background-image: #ababab;
+  /* background-image: url(../../souleymane-3.jpg);  */
+  /* z-index: 1;  */
   
-  fieldset {
-    max-width: 80%;
-    /* margin: 10px 10px  10px 10px; */
-    display: flex; 
-    border: none;
-    height:200px;
-    border-radius: 4px;
-    box-shadow: -1px 1px 5px 4px black; 
-    padding: 3px; 
-   }  
-   .form-group{
-    margin: 10px 10px  10px 10px;
-  } 
-    /* label{
+
+}
+    label{
       margin: 1em 0 0 0;
       padding: .25em 0;
       text-align: left;
       width: auto;
 
-    } */
-    /* .LoginForm{
-     margin-top: 10px;
     }
+
   
-    input {
-      width: 100%;
+     input {
+      width: 60%;;
       line-height: 2em;
       padding: 0 .5em;
       border-radius: 2px;
       border: 2px solid; 
-      
 
-    }
+    } 
   
     input:focus {
       border: 2px solid;
     }
   
-    div {
-      margin: 1em;
-    }
     
     h3{
         text-align: center;
         color:black;
         margin:2px;
     }
-   */
-  
-  /* .error-msg {
-    color: $color-error;
-  }
-   */
-  /* .warning-msg {
-    margin-top: 1em;
-    color: red;
-    font-size: 12px;
-  }
-   */
-   input[type='submit'] {
+   
+   /* input[type='submit'] { */
     /* margin: 2em auto 1em auto; */
-     margin-top:5px;
+     /* margin-top:5px;
     padding: 0.25em 0;
-    width: 60%;
-    background-color: black;
-    color:white;
+    width: 60%; */
+    /* background-color: black; */
+    /* color:white;
     border: 1px solid whitesmoke;
     border-radius: 2px;
     box-shadow: 2px 2px 2px 0px black;
     cursor: pointer; 
     
-   } 
+   }  */
+   .submitButton{
+    /* position: absolute; */
+    width: 100%;
+    margin:5px auto;
+    padding: 0.25em 0;
+    /* width: 400px; */
+    /* left: 600px; */
+    height:40px;
+    background-color: black;
+    color:white;
+    border: 1px solid whitesmoke;
+    border-radius: 2px;
+    /* box-shadow: 2px 2px 2px 0px black; */
+    cursor: pointer;
+   }
     
-
-
-fieldset {
-  width: 100%;
-  margin: 0 auto;
-  display: flex;
-  flex-flow: column nowrap;
- /* justify-content: center; */
-   /* align-items: center; */
-  background-color: black;
-  border: none;
-  border-radius: 4px;
-  box-shadow: -1px 1px 5px 4px black;
-  padding: 1em 1.5em;
-}
   label {
     margin: 1em 0 0 0;
     padding: .25em 0;
     text-align: left;
     width: auto;
+    color:white;
   /*   display: flex;
     flex-direction: column nowrap; */
   }
-  /* .login-form__user-name-label{
-      background-color: chartreuse;
-  } */
-  /* .logInForm{
-    background-color: chartreuse;
-  } */
-  /* @media only screen and (min-width: 640px) {
-    fieldset {
-      width: 80%;
-      padding: 1em 2em;
-    }
   
-    .login-page {
-      padding: 1em;
-      margin: 2em auto;
-    }
-    
-    .registration-page {
-      padding: 1em;
-      margin: 2em auto;
-    }
+.login-page {
+  padding: 2em 0;
+  margin: 0;
+}
+
+
+form {
+  margin: 0 auto;
+  /* // border: 1px solid black; */
+}
+.login-form{
+  background-image: url(../../souleymane-3.jpg);
+  height:1000px;
+  margin-top:0;
+}
+
+.loginForm{
+  max-width: 60%;
+  display: flex;
+  height: 300px;
+  margin:30 auto;
+  flex-flow: column nowrap;
+  background-color: #EAF6F6;
+  /* // justify-content: center;
+  // align-items: center; */
+  background-color: #E6E6FA;
+  border: none;
+  border-radius: 4px;
+  box-shadow: -1px 1px 5px 4px #000000;
+  padding: 1em 1.5em;
+}
+
+  label {
+    margin: 1em 0 0 0;
+    padding: .25em 0;
+    text-align: left;
+    width: auto;
+    color:black
+  /*   display: flex;
+    flex-direction: column nowrap; */
+  }
+
+  input {
+    width: 100%;
+    line-height: 2em;
+    padding: 0 .5em;
+    border-radius: 2px;
+    border: 2px solid color-surface-light;
+    background-color: color-overlay;
+  }
+
+  input:focus {
+    border: 2px solid white;
+  }
+
+  /* div {
+    margin: 1em;
   } */
 
 
-  /* ............@media Query...........................*/
+.error-msg {
+  color: color-error;
+}
 
- @media all and (min-width: 640px) {
-  .form-group {
-     margin: 20px;
-      width: 80%;
-      padding: 1em 2em;
-    }
-  
-    .fieldset {
-      padding: 1em;
-      margin: 2em auto;
-    }
-    input[type='submit'] {
-      /* margin: 2em auto 1em auto; */
-       margin-top:5px;
-      padding: 0.25em 0;
-      width: 60%;
-      background-color: black;
-      color:white;
-      border: 1px solid whitesmoke;
-      border-radius: 2px;
-      box-shadow: 2px 2px 2px 0px black;
-      cursor: pointer; 
-      
-     } 
-  } 
-/* Media Query and type  for screen smaller or equal to 640px*/
- @media all and (max-width: 640px) {
-  /* .headerContainer {
-    width: 90%;
-    margin: auto;
-    height:250px;
-    flex-direction: row;
-    margin-bottom:15px;
-  } */
-  /* h2{
-      color:white;
-      font-size: 20px;
-      text-align: center;
-  } */
-  /* .navButton{
-      justify-content: center;
-      text-align:center;
-  }  */
+.warning-msg {
+  margin-top: 1em;
+  color: color-primary;
+  font-size: 12px;
+}
 
-  /* .group {
-    flex-direction: row;
-  } */
+input[type='submit'] {
+  margin: 2em auto 1em auto;
+  padding: 0.25em 0;
+  width: 100px;
+  background-color: color-overlay;
+  border: 1px solid color-surface-light;
+  border-radius: 2px;
+  box-shadow: 2px 2px 2px 0px color-shadow;
+  transition: box-shadow 0.1s;
+}
+input:hover {
+    background-color: black;
+    color: white;
+    border: 1px solid;
+    cursor: pointer;
+  }
+  input:focus {
+    background-color: black;
+    color: color-text-normal;
+    border: 1px solid color-quaternary;
+    box-shadow: none;
+  }
+  input:active {
+    background-color: color-overlay-dark;
+    color: color-text-normal;
+    border: 1px solid color-secondary;
+  }
+
+
+
+/* ............@media Query...........................*/
+
+@media all and (max-width: 640px) {
+  .submitButton{
+    /* position: relative; */
+    margin:0 auto;
+    padding: 0.25em 0;
+    width:100%;
+    /* left:150px; */
+    height:40px;
+    background-color: black;
+    color:white;
+    /* border: 1px solid whitesmoke; */
+    border-radius: 2px;
+    box-shadow: 2px 2px 2px 0px black;
+    cursor: pointer;
+   }
+   .loginform{
+    position: absolute;
+    width: 80%;
+    margin: 40 auto;
+    color:#EAF6F6;
+    /* display: flex; */
+    height: 200px;
+    flex-flow: column nowrap;
+    /* // justify-content: center;
+    // align-items: center; */
+    background-color: #E6E6FA;
+    border: none;
+    border-radius: 4px;
+    box-shadow: -1px 1px 5px 4px #000000;
+    padding: 1em 1.5em;
+  }
+   
+
  } 
+
