--- a/src/components/NoteResult/NoteResult.css
+++ b/src/components/NoteResult/NoteResult.css
@@ -1,7 +1,8 @@
 .Result {
-    background-color: white;
+    background-color: #EAF6F6;
+    /* background-image: url(../../souleymane-3.jpg); */
     color: black;
-    margin: 15px;
+    margin: 0px auto;
     max-width: 280px;
     padding: 8px 0 8px 8px;
     border: solid;
@@ -10,15 +11,16 @@
   }
   h2{
       text-align: center;
+      /* color:white; */
   }
   
-  .Result_delete{
-    background-color:green;
-    border: 0;
-    color:white;
-    font-size: 12px;
-    width:60px;
-    margin: 10px;
+  .Result_link{
+    background-color: #bd0909;
+    margin:5px;
+    text-align:center;
+  }
+  .Result_link:hover {
+    color: white;
   }
   .Result_delete:hover {
     background-color: #bd0909;
@@ -26,30 +28,103 @@
     cursor: pointer;
     font-weight: bold;
   }
-
-  /* span{
-      border:solid;
-  } */
+  .resultElements{
+    /* position:absolute; */
+    /* margin: 1px auto; */
+    padding:5px;
+    height:auto;
+    margin:2px;
+    /* margin:50px auto; */
+  }
+  .Result_month_taken{
+    background-color: greenyellow;
+    margin:5px;
+    padding:2px;
+    border-radius: 10px;
+    text-align:center;
+  }
+  .Result__meal_taken{
+    background-color: white;
+    margin:5px;
+    padding:2px;
+    border-radius: 10px;
+    text-align:center;
+  }
+  .Result_result_read{
+    background-color: #eba83a;
+    margin:5px;
+    /* padding:2px; */
+    border-radius: 10px;
+    text-align:center;
+  }
+  .Result_month_id{
+    background-color: greenyellow;
+    margin:5px;
+    padding:2px;
+    border-radius: 10px;
+    text-align:center;
+  }
+  .Results_description{
+    background-color: #ffc7c7;
+    margin:5px;
+    /* padding:2px; */
+    border-radius: 10px;
+    text-align:center;
+  }
+  .Result_userid{
+    background-color: #eba83a;
+    margin:5px;
+    /* padding:2px; */
+    border-radius: 10px;
+    text-align:center;
+  }
+  .Result_diabetestype{
+    background-color: #00ead3;
+    margin:5px;
+    /* padding:2px; */
+    border-radius: 10px;
+    text-align:center;
+  }
+  .Result_delete{
+    background-color: red;
+    margin:10px auto;
+    width:100%;
+    height: 30px;
+    /* padding:2px; */
+    /* border-radius: 10px; */
+    text-align:center;
+    border:none;
+  }
+  .result-form{
+    background-image: url(../../souleymane-3.jpg);
+  }
+  span{
+    margin-left: 10px;
+  }
+  
 
   
-  /* .Result__result_read{
-    font-size: 20px;
-    margin: 0;
-    max-width: 80%;
-    min-height: 24px;
-  } */
-  /* .Result__result_read a {
-    color: #cacaca;
-    display: block;
-    text-decoration: none;
-  } */
-  /* .Result__result_read a:hover {
-    color: #FFB72F;
-  } */
-  
-  /* .Result__date_tested {
-    bottom: 8px;
-    color: #a7a5a5;
-    font-size: 14px;
-    position: absolute;
-  } */
+  @media all and (min-width: 640px) {
+
+    .Result {
+      /* background-color: #EAF6F6; */
+      /* background-image: url(../../souleymane-3.jpg); */
+      color: black;
+      margin: 15px auto;
+      max-width: 40%;
+      padding: 8px 0 8px 8px;
+      border: solid;
+      border-radius: 10px;
+      /* position: relative; */
+    }
+    .Result_result_dates{
+      background-color: #00ead3;
+      margin:5px;
+      /* padding:2px; */
+      border-radius: 10px;
+      text-align:center;
+    }
+    .result-form{
+      background-image: url(../../souleymane-3.jpg);
+    }
+  }
