--- a/src/components/RegistrationForm/RegistrationForm.css
+++ b/src/components/RegistrationForm/RegistrationForm.css
@@ -1,34 +1,54 @@
 *{
     box-sizing: border-box;
+    /* background-image: url(../../souleymane-3.jpg); */
   }
-
-
-
-fieldset {
-    max-width:200px;
-    margin: 0 0 0 0;
-    /* display: flex; */
-    border: none;
-    border-radius: 4px;
-    box-shadow: -1px 1px 5px 4px black; 
-    padding: 10px;
-  }
+.signUpForm-form{
+  position:relative;
+}
 
 .registrationForm{
-    text-decoration: none;
-    padding: 5px;
-    border-radius: 10px;
-    margin: 5px;
-    color:black;
-    background:white;
+  width:50%;
+  height:500px;
 }
-.form-group{
-  margin: 10px 10px  10px 10px;
+.signUpForm-form{
+  background-image: url(../../souleymane-3.jpg);
+  height:1000px;
 }
+/* fieldset {
+    width:50%;
+    position:absolute;
+    left:200px;
+    display: flex;
+    border: none;
+    border-radius: 4px;
+    box-shadow: -1px 1px 5px 4px #E6E6FA; 
+    padding: 10px;
+    height:450px;
+  } */
+
 input{
 width:100%;
 line-height: 2em;
 padding:0.5em;
 border-radius: 2px;
 }
+.btn{
+  width:90%;
+  margin: 12px 40px;
+line-height: 2em;
+padding:0.5em;
+border-radius: 2px;
+}
+@media all and (max-width: 640px) {
 
+  .registrationForm{
+    width:50%;
+    height:400px;
+  }
+.btn{
+  width:50%;
+  margin:0 auto;
+  background-color: white;
+  color:black;
+}
+  }
