--- a/src/routes/LandingPage/LandingPage.css
+++ b/src/routes/LandingPage/LandingPage.css
@@ -1,11 +1,35 @@
-.landingPage { 
-    width: 100%;
+*{
+  box-sizing: border-box;
+  color:#551A8B;
+}
+
+/* .landingPage {  */
+    /* width: 100%;
     height: 100%;
-    margin-top: 12.5%;
-    background: url(../../souleymane-3.jpg);
-    background-position: 80% 80%;
+    margin-top: 12.5%; */
+    /* background-image: url(../../souleymane-3.jpg); */
+    /* background-position: 80% 80%;
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: 100%; */
+  /* } */
+
+  .homePage{
+    position:absolute;
+    width:100%;
+    left:-20px;
+    top:90px;
+    bottom: 10px;
+    background-image: url(../../souleymane-3.jpg);
+    /* background-repeat: no-repeat;  */
+    /* z-index: -1; */
+    /* opacity: 0.5; */
+  }
+  img {
+    opacity: 0.5;
+  }
+  
+  img:hover {
+    opacity: 1.0;
   }
 
 h1{
@@ -14,57 +38,63 @@ h1{
     color:white;
     margin: 20px;
     
-}
+ } 
+  div h3{
+   color:#551A8B;
+ }
 
 .firtssection{
     width:100%;
     border:solid;
+    height:250px;
     /* border-radius: 5%; */
     margin:10px;
-    background-color:gray;
-    color:white;
+    background-color:#EAF6F6;
+    color:black;
 }
 
 .secondsection{
     width:100%;
     border:solid;
     margin:10px;
+    height:250px;
     /* border-radius: 5%; */
-    background-color:gray;
-    color:white;
+    background-color:#EAF6F6;
+    color:black;
 }
 .thirdsection{
     width:100%;
     border:solid;
     margin:10px;
+    height:250px;
     /* border-radius: 5%; */
-    background-color:gray;
-    color:white;
+    background-color:#EAF6F6;
+    color:black;
 }
   /* ............@media Query...........................*/
 
-  @media all and (min-width: 640px) {
-      .homePage{
+ @media all and (min-width: 640px) {
+       .homePage{
         display: flex;
         flex-direction: row;
         text-align: center;
-        max-width:90%;
+        max-width:100%;
         margin-top: 40px;
         margin-left: 40px;
-      }
-    /* header {
+      } 
+    header {
       display: flex;
       height:100px;
       /* justify-content: space-between; */
-    /* }  */
+     }
   
-    .logo {
+     .logo {
       margin: 14px 0 14px 20px;
       padding-top: 0;
       font-size: 42px;
-    }
+    } 
     
-    .navButton {
+     .navButton {
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -74,12 +104,23 @@ h1{
         margin: 0px 0 0px 0px;
         text-align: right;
         background-color: red;
-      }
-  }
+      } 
+   } 
   /* Media Query and type  for screen smaller or equal to 640px*/
   @media all and (max-width: 640px) {
+
+    .homePage{
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      max-width:90%;
+      margin-top: 150px;
+      margin-left: 25px;
+      bottom: -100px;
+    }
     .firtssection {
       width: 90%;
+      padding:5px;
       margin: auto;
       height:250px;
       flex-direction: row;
@@ -88,6 +129,7 @@ h1{
     .secondsection {
         width: 90%;
         margin: auto;
+        padding:5px;
         height:250px;
         flex-direction: row;
         margin-bottom:15px;
@@ -95,6 +137,7 @@ h1{
       .thirdsection {
         width: 90%;
         margin: auto;
+        padding:5px;
         height:250px;
         flex-direction: row;
         margin-bottom:15px;
@@ -103,6 +146,7 @@ h1{
         color:white;
         font-size: 20px;
         text-align: center;
+
     }
     p{
         justify-content: center;
