update edit and media query

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,45 +1,57 @@
 *{
     box-sizing: border-box;
-    /* background-image: url(../../souleymane-3.jpg); */
-    /* text-align: center; */
+    
 }
 
 
 .site-nav{
   position:relative;
   margin: 0;
-  height: 100px;
-  background-color: #EAF6F6;
+  height: 700px;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../../community-1.jpg);
+  background-repeat: no-repeat;
+  background-size: 100%;
   width: 100%;
-  /* background-image: url(../../souleymane-3.jpg);  */
 }
 
 
 .titlelink{
-  position:absolute;
-  font-size: 30px;
-  margin-top: -20px;
-  /* margin-bottom: 60px; */
-
-
+  color:orange;
+  font-size: 60px;
 }
 
 .registerLink{
   position:absolute;
-  right:80px;
+  right:90px;
   padding:2px;
-  border:solid black;
-  width:80px;
+  color:orange;
+  border:solid orange;
+  width:70px;
   height: 30px;
   text-align: center;
   border-radius: 10px;
  
 }
+.loginLink{
+  position:absolute;
+  right:10px;
+  padding:2px;
+  color:orange;
+  border:solid;
+  width:70px; 
+  height: 30px;
+  text-align: center;
+  border-radius: 10px;
+ 
+}
+
+
 .addResultlink{
   position:absolute;
   right:80px;
   padding:2px;
-  border:solid black;
+  border:solid orange;
+  color:orange;
   width:80px;
   height: 30px;
   text-align: center;
@@ -57,6 +69,8 @@
   right:10px;
   padding:2px;
   border:solid;
+  border:solid orange;
+  color:orange;
   width:60px; 
   height: 30px;
   text-align: center;
@@ -76,17 +90,7 @@
   border: 1px solid;
   cursor: pointer;
 }
-.loginLink{
-  position:absolute;
-  right:10px;
-  padding:2px;
-  border:solid;
-  width:60px; 
-  height: 30px;
-  text-align: center;
-  border-radius: 10px;
- 
-}
+
 .loginLink:hover {
   background-color: black;
   color: white;
@@ -96,7 +100,6 @@
 
 
   nav {
-    border-bottom: 2px solid;
     display: flex;
     max-width: 100%;
     flex-flow: row nowrap;
@@ -126,9 +129,18 @@
   
     h1 {
       font-size: 2px;
+     
+    }
+    .titlelink{
+      display: inline-block;
+      margin: 0 0.5rem;
+      animation: bounce; /* referring directly to the animation's @keyframe declaration */
+      animation-duration: 2s; /* don't forget to set a duration! */
+      color:orange;
+      font-size: 60px;
     }
   
-  
+  /* -------------------------------MEDIA QUERY----------------------------*/
   @media only screen and (max-width: 620px) {
     
     nav {
@@ -142,7 +154,7 @@
       flex-direction: row;
     }
     .site-nav{
-      height:200px;
+      height:350px;
       width:100%;
       margin-bottom:40px;
     }
@@ -168,11 +180,13 @@
         position:absolute;
         right:250px;
         padding:2px;
-        border:solid black;
+        border:solid orange;
         width:80px;
         height: 30px;
         text-align: center;
         border-radius: 10px;
+        top:250px;
+        left:100px;
        
       }
       .loginLink{
@@ -184,6 +198,8 @@
         height: 30px;
         text-align: center;
         border-radius: 10px;
+        top:250px;
+        left:200px;
        
       }
       .logoutlink{
@@ -196,18 +212,22 @@
         height: 30px;
         text-align: center;
         border-radius: 10px;
+        top:270px;
+        left:200px;
       }
 
       .addResultlink{
         position:absolute;
         right:80px;
         padding:2px;
-        border:solid black;
+        border:solid orange;
         left:200px;
         width:80px;
         height: 50px;
         text-align: center;
         border-radius: 10px;
+        top:270px;
+        left:100px;
       }
 
     }
