--- a/src/routes/LandingPage/LandingPage.css
+++ b/src/routes/LandingPage/LandingPage.css
@@ -3,28 +3,7 @@
   color:#551A8B;
 }
 
-/* .landingPage {  */
-    /* width: 100%;
-    height: 100%;
-    margin-top: 12.5%; */
-    /* background-image: url(../../souleymane-3.jpg); */
-    /* background-position: 80% 80%;
-    background-repeat: no-repeat;
-    background-size: 100%; */
-  /* } */
-  .homePageHeader{
-    /* position:absolute; */
-    position:relative;
-    width:100%;
-    height:700px;
-    /* left:-20px; */
-    /* top:100px; */
-    bottom: 10px;
-    /* background-color: red; */
-    background-image: url(../../community-1.jpg);
-    /* background-repeat: no-repeat; */
-    
-  }
+
 
   .homePage{
     /* position:absolute; */
@@ -35,8 +14,13 @@
     top:-40px;
     /* top:90px; */
     /* bottom: 10px; */
-    background-image: url(../../souleymane-3.jpg);
-    /* background-repeat: no-repeat;  */
+    /* background-image: url(../../souleymane-3.jpg); */
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../../souleymane-3.jpg);
+
+    background-repeat: no-repeat; 
+    background-size: 100%;
+    opacity:0.80;
+
     /* z-index: -1; */
     /* opacity: 0.5; */
   }
@@ -101,11 +85,12 @@ h1{
         max-width:100%;
         margin-top: 40px;
         margin-left: 40px;
+        height:700px;
       } 
     header {
       display: flex;
       height:100px;
-      /* justify-content: space-between; */
+      
      }
   
      .logo {
@@ -134,15 +119,18 @@ h1{
       flex-direction: column;
       text-align: center;
       max-width:90%;
-      margin-top: 150px;
+      margin-top: 50px;
       margin-left: 25px;
-      bottom: -100px;
+      background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../../souleymane-3.jpg);
+      background-size: 100%;
+
     }
     .firtssection {
       width: 90%;
       padding:5px;
       margin: auto;
-      height:250px;
+      /* height:250px; */
+      height:300px;
       flex-direction: row;
       margin-bottom:15px;
     }
@@ -159,6 +147,64 @@ h1{
         margin: auto;
         padding:5px;
         height:250px;
+        flex-direction: row;
+        margin-bottom:15px;
+      }
+    h2{
+        color:white;
+        font-size: 20px;
+        text-align: center;
+
+    }
+    p{
+        justify-content: center;
+        text-align:center;
+    }
+    h3{
+        text-align: center;
+        color:red;
+    }
+  
+    /* .group {
+      flex-direction: row;
+    } */
+  }
+
+
+
+  /* small phone: from 0 to 480 px*/
+  @media only screen and (max-width: 480px) {
+
+    .homePage{
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      max-width:90%;
+      margin-top: 150px;
+      margin-left: 25px;
+      bottom: -100px;
+    }
+    .firtssection {
+      width: 90%;
+      padding:5px;
+      margin: auto;
+      height:auto;
+      flex-direction: row;
+      margin-bottom:15px;
+    }
+    .secondsection {
+        width: 90%;
+        margin: auto;
+        padding:5px;
+        height:auto;
+        flex-direction: row;
+        margin-bottom:15px;
+      }
+      .thirdsection {
+        width: 90%;
+        margin: auto;
+        padding:5px;
+        height:auto;
         flex-direction: row;
         margin-bottom:15px;
       }
