--- a/src/components/RegistrationForm/RegistrationForm.css
+++ b/src/components/RegistrationForm/RegistrationForm.css
@@ -1,6 +1,5 @@
 *{
     box-sizing: border-box;
-    /* background-image: url(../../souleymane-3.jpg); */
   }
 .signUpForm-form{
   position:relative;
@@ -9,22 +8,13 @@
 .registrationForm{
   width:50%;
   height:500px;
+  margin-top: 5px;
 }
 .signUpForm-form{
   background-image: url(../../souleymane-3.jpg);
   height:1000px;
 }
-/* fieldset {
-    width:50%;
-    position:absolute;
-    left:200px;
-    display: flex;
-    border: none;
-    border-radius: 4px;
-    box-shadow: -1px 1px 5px 4px #E6E6FA; 
-    padding: 10px;
-    height:450px;
-  } */
+
 
 input{
 width:100%;
@@ -33,22 +23,29 @@ padding:0.5em;
 border-radius: 2px;
 }
 .btn{
-  width:90%;
-  margin: 12px 40px;
+/* width:90%; */
+width: 500px;
+margin: 12px 40px;
 line-height: 2em;
 padding:0.5em;
 border-radius: 2px;
+font-size:20px;
+color:white;
+background-color:red;
 }
 @media all and (max-width: 640px) {
 
   .registrationForm{
     width:50%;
-    height:400px;
+    height:450px;
+    margin-top: 1px;
   }
 .btn{
-  width:50%;
+  width:100%;
   margin:0 auto;
-  background-color: white;
-  color:black;
+ font-size:20px;
+  color:white;
+  cursor: pointer;
+  background-color:red;
 }
   }
